10-31-2025 update: - removed wally.toml and added pesde.toml instead - removed initialize.sh - added assemble, canBe, combine, disassemble, hasBatchim,   removeLastCharacter APIs

--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,10 @@
 # lock files
 *.lock
 
-# wally packages
-./Packages
+# pesde files
+.pesde
+/luau_packages
+/lune_packages
 
 # rojo files
 aftman.toml
