--- a/default.project.json
+++ b/default.project.json
@@ -1,1 +1,7 @@
-{"name":"hangul-luau","className":"ModuleScript","filePaths":["src\\init.luau","default.project.json"],"children":[{"name":"internal","className":"Folder","children":[{"name":"constants","className":"ModuleScript","filePaths":["src\\internal\\constants.luau"]}]}]}
+{
+    "name": "hangul-luau",
+
+    "tree": {
+        "$path": "src"
+    }
+}
