10-31-2025 update: - Added frktest package - Added a .spec file for canBe.luau

--- a/.luaurc
+++ b/.luaurc
@@ -4,6 +4,7 @@
     "lintErrors": true,
     "aliases": {
         "hangul-luau": "src",
-        "lune_packages": "lune_packages"
+        "lune_packages": "lune_packages",
+        "frktest": ".pesde/itsfrank+frktest/0.0.2"
     }
 }
