--- a/.luaurc
+++ b/.luaurc
@@ -4,7 +4,6 @@
     "lintErrors": true,
     "aliases": {
         "hangul-luau": "src",
-        "lune_packages": "lune_packages",
-        "frktest": ".pesde/itsfrank+frktest/0.0.2"
+        "lune_packages": "lune_packages"
     }
 }
